base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memo-app
  labels:
    name: memo-app
    monitoring: "true"
