base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memo-app-service
  labels:
    app: memo-app
spec:
  selector:
    app: memo-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
